[package]
name = "heif"
version = "0.1.0"
authors = ["Basix <basix@basix.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libheif-sys = "1.8.1"
image = { version = "0.23.9", optional = true }

[dev-dependencies]
image = "0.23.9"

[features]
image-traits = []